test/libsolidity/syntaxTests/visibility/interface/function_internal.sol
interface I {
	function f() internal;
}
// ----
// TypeError 1560: (15-37='function f() internal;'): Functions in interfaces must be declared external.
